--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11368,3 +11368,8 @@ input[type="file"] {
   color: #fff;
   background-color: #4e73df;
 }
+
+.technology-list li{
+  display: inline; 
+  list-style-type: none;
+}
