--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11373,3 +11373,8 @@ input[type="file"] {
   display: inline; 
   list-style-type: none;
 }
+
+.filerDate label{
+  padding-top: 5px;
+  font-weight: bold;
+}
