--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -127,5 +127,25 @@
             </div>
         </div>
     </div>    
+
+    <!-- Content Column -->
+    <div class="col-lg-6 mb-4">
+        <!-- Project Card Example -->
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Revenue Chart</h6>
+            </div>
+            <div class="card-body">
+                <canvas baseChart
+                [data]="barChartData"
+                [options]="barChartOptions"
+                [plugins]="barChartPlugins"
+                [type]="barChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)">
+              </canvas>
+            </div>
+        </div>
+    </div>
 </div>
 
