--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -102,10 +102,8 @@
                     <div class="form-group col-lg-4">
                         <label for="dob">Date of Birth</label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" id="dob" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
@@ -162,19 +160,15 @@
                     <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #s="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="s.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="endDate">End Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #e="ngbDatepicker" id="endDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="e.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
                     <div class="form-group col-lg-4">
