--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -13,25 +13,25 @@
         </div>
         <div class="card-body">
             <div class="row mrgn-btm-15">
-                <div class="col-lg-3">
-                    <select name="year" class="form-select col-lg-12" (change)="onGridYearChange($event.target)">
-                        <option *ngFor="let year of years" [value]="year.id">{{ year.name }}</option>
-                    </select>
+                <div class="col-lg-2">
+                    <strong>Start Month/Year</strong>
+                    <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
+                        [bsConfig]="{dateInputFormat: 'MM/YYYY'}" minMode="month">
                 </div>
-                <div class="col-lg-3">
-                    <select name="month" class="form-select col-lg-12" (change)="onGridMonthChange($event.target)">
-                        <option *ngFor="let month of months" [value]="month.id">{{ month.name }}</option>
-                    </select>
+                <div class="col-lg-2">
+                    <strong>End Month/Year</strong>
+                    <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
+                        [bsConfig]="{dateInputFormat: 'MM/YYYY'}" minMode="month">
                 </div>
 
-                <div class="col-lg-6 algn-right">
+                <div class="col-lg-8 algn-right">
                     <button class="btn btn-primary btn-sm" (click)="addProjectPayment()">
                         Add Project Payment</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <table datatable [dtOptions]="dtOptions"  class="row-border hover">
+                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
                         <thead>
                             <tr>
                                 <th scope="col">Project Name</th>
@@ -117,26 +117,17 @@
 
                 <div class="row">
                     <div class="form-group col-lg-4">
-                        <label for="year">Year</label>
-                        <select name="year" class="form-select col-lg-12" (change)="onYearChange($event.target)">
-                            <option *ngFor="let year of years" [value]="year.id">{{ year.name }}</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group col-lg-4">
-                        <label for="month">Month </label>
-                        <select name="month" class="form-select col-lg-12" (change)="onMonthChange($event.target)">
-                            <option *ngFor="let month of months" [value]="month.id">{{ month.name }}</option>
-                        </select>
+                        <label for="year">Payment Month/Year</label>
+                        <input autocomplete="off" class="form-control" name="date" bsDatepicker
+                            [bsConfig]="{dateInputFormat: 'MM/YYYY'}" minMode="month" placeholder="MM/YYYY"
+                            mask="00/0000">
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="paymentDate">Payment Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" id="paymentDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                                mask="00/00/0000" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
                 </div>
