--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -127,20 +127,16 @@
                     <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #s="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="s.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="completionDate">Completion Date </label>
                         <div class="input-group">
-                            <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #c="ngbDatepicker" id="completionDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="c.toggle()"
-                                type="button"></button>
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
                         </div>
                     </div>
 
