--- a/src/app/admin/pages/project-payment/project-payment.component.html
+++ b/src/app/admin/pages/project-payment/project-payment.component.html
@@ -119,7 +119,7 @@
                     <div class="form-group col-lg-4">
                         <label for="year">Payment Month/Year</label>
                         <input autocomplete="off" class="form-control" name="date" bsDatepicker
-                            [bsConfig]="{dateInputFormat: 'MM/YYYY'}" minMode="month" placeholder="MM/YYYY"
+                        [maxDate]="today" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}" minMode="month" placeholder="MM/YYYY"
                             mask="00/0000">
                     </div>
 
@@ -127,7 +127,7 @@
                         <label for="paymentDate">Payment Date </label>
                         <div class="input-group">
                             <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
-                                mask="00/00/0000" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY'}">
+                                mask="00/00/0000"  [maxDate]="today"  [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                         </div>
                     </div>
                 </div>
