--- a/src/app/admin/pages/report/report.component.html
+++ b/src/app/admin/pages/report/report.component.html
@@ -10,19 +10,25 @@
 
             <div class="row">
                 <div class="form-group col-lg-6">
-                    <label for="year">Year</label>
-                    <select name="year" class="form-select col-lg-12" (change)="onYearChange($event.target)">
-                        <option *ngFor="let year of years" [value]="year.id">{{ year.name }}</option>
-                    </select>
+                    <label for="stratdate">Start Date</label>
+                    <div class="input-group">
+                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [maxDate]="today"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                    </div>
                 </div>
 
+
                 <div class="form-group col-lg-6">
-                    <label for="month">Month </label>
-                    <select name="month" class="form-select col-lg-12" (change)="onMonthChange($event.target)">
-                        <option *ngFor="let month of months" [value]="month.id">{{ month.name }}</option>
-                    </select>
+                    <label for="enddate">End Date</label>
+                    <div class="input-group">
+                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                            [maxDate]="today"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                    </div>
                 </div>
             </div>
+
 
             <div class="row">
                 <div class="form-group col-lg-6">
