--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -4,6 +4,8 @@
     </h1>
 </div>
 
+
+
 <!-- Content Row -->
 <div class="row">
 
@@ -82,16 +84,38 @@
 </div>
 
 <!-- Content Row -->
-
 <div class="row">
 
-    <!-- Content Column -->
-    <div class="col-lg-6 mb-4">
-        <!-- Project Card Example -->
+    <div class="col-xl-6 col-lg-8">
+
+        <!-- Area Chart -->
         <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Revenue Chart</h6>
+            </div>
+            <div class="card-body">
+                <div class="chart-area">
+                    <canvas id="myBarChart" 
+                    baseChart 
+                    [data]="barChartData" 
+                    [type]="barChartType"
+                    [options]="barChartOptions"
+                    [plugins]="barChartPlugins">
+                    </canvas>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Donut Chart -->
+    <div class="col-xl-6 col-lg-6">
+        <div class="card shadow mb-4">
+            <!-- Card Header - Dropdown -->
             <div class="card-header py-3">
                 <h6 class="m-0 font-weight-bold text-primary">Projects</h6>
             </div>
+            <!-- Card Body -->
+            
             <div class="card-body">
                 <h4 class="small font-weight-bold">Server Migration <span class="float-right">20%</span></h4>
                 <div class="progress mb-4">
@@ -114,32 +138,11 @@
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <h4 class="small font-weight-bold">Account Setup <span class="float-right">Complete!</span></h4>
-                <div class="progress">
+                <div class="progress mrgn-btm-25">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
 
-            </div>
-        </div>
-    </div>
-
-    <!-- Content Column -->
-    <div class="col-lg-6 mb-4">
-        <!-- Project Card Example -->
-        <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Revenue Chart</h6>
-            </div>
-            <div class="card-body">
-                <div class="chart-bar">
-                    <canvas id="myBarChart" 
-                    baseChart 
-                    [data]="barChartData" 
-                    [type]="barChartType"
-                    [options]="barChartOptions"
-                    [plugins]="barChartPlugins">
-                    </canvas>
-                </div>
             </div>
         </div>
     </div>
