--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,36 +1,46 @@
 <div id="wrapper">
 
-    <!-- Sidebar -->
-   <app-side-nav></app-side-nav>
-    <!-- End of Sidebar -->
-  
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
-  
-      <!-- Main Content -->
-      <div id="content">
-  
-        <!-- Header -->
-        <app-header></app-header>        
-        <!-- End of Topbar -->
-  
-        <!-- Begin Page Content -->
-        <div class="container-fluid">  
-            <router-outlet></router-outlet>  
-        </div>
-        <!-- /.container-fluid -->
-  
+  <!-- Sidebar -->
+  <app-side-nav></app-side-nav>
+  <!-- End of Sidebar -->
+
+  <!-- Content Wrapper -->
+  <div id="content-wrapper" class="d-flex flex-column">
+
+    <!-- Main Content -->
+    <div id="content">
+
+      <!-- Header -->
+      <app-header></app-header>
+      <!-- End of Topbar -->
+
+      <!-- Begin Page Content -->
+      <div class="container-fluid">
+        <router-outlet></router-outlet>
       </div>
-      <!-- End of Main Content -->
+      <!-- /.container-fluid -->
+
 
     </div>
-    <!-- End of Content Wrapper -->
-  
+    <!-- End of Main Content -->
+
+    <!-- Footer -->
+    <footer class="sticky-footer bg-white">
+      <div class="container my-auto">
+        <div class="copyright text-center my-auto">
+          <span>Copyright &copy; TechMatys 2020</span>
+        </div>
+      </div>
+    </footer>
+    <!-- End of Footer -->
+
   </div>
-  <!-- End of Page Wrapper -->
-  
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-  
+  <!-- End of Content Wrapper -->
+
+</div>
+<!-- End of Page Wrapper -->
+
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+  <i class="fas fa-angle-up"></i>
+</a>
