--- a/src/app/admin/pages/company-expenses/company-expenses.component.html
+++ b/src/app/admin/pages/company-expenses/company-expenses.component.html
@@ -15,14 +15,14 @@
         <div class="card-body">
             <div class="row mrgn-btm-15">
                 <div class="col-lg-2">
-                    <strong>Start Month/Year</strong>
-                    <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
-                        [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month">
+                    <strong>Start Date</strong>
+                    <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                    [maxDate]="today" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                 </div>
                 <div class="col-lg-2">
-                    <strong>End Month/Year</strong>
-                    <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
-                        [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month">
+                    <strong>End Date</strong>
+                    <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
+                    [maxDate]="today" [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}" >
                 </div>
                 <div class="col-lg-8 algn-right">
                     <button class="btn btn-primary btn-sm" (click)="addExpenses()">
@@ -100,12 +100,12 @@
                         <label for="year">Payment Month/Year</label>
                         <input autocomplete="off" class="form-control" name="date" bsDatepicker
                             [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month" placeholder="MM/YYYY"
-                            mask="00/0000" [max]="date">
+                            mask="00/0000" [maxDate]="today" >
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="paymentdate">Expense Date</label>
                         <div class="input-group">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker  mask="00/00/0000"  [maxDate]="today"  [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker  mask="00/00/0000" [maxDate]="today"  [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                         </div>
                     </div>
                 </div>
