--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -19,12 +19,14 @@
                 <div class="col-lg-2">
                     <strong>Start Month/Year</strong>
                     <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
-                        [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month">
+                        [maxDate]="today" [bsConfig]="{dateInputFormat: 'MM/YYYY', containerClass: 'theme-dark-blue'}"
+                        minMode="month">
                 </div>
                 <div class="col-lg-2">
                     <strong>End Month/Year</strong>
                     <input type="text" placeholder="MM/YYYY" class="form-control" bsDatepicker mask="00/0000"
-                        [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month">
+                        [maxDate]="today" [bsConfig]="{dateInputFormat: 'MM/YYYY', containerClass: 'theme-dark-blue'}"
+                        minMode="month">
                 </div>
                 <div class="col-lg-8 algn-right">
                     <button class="btn btn-primary btn-sm header-btn" (click)="addEmployeePayment()">
@@ -105,16 +107,17 @@
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="year">Payment Month/Year</label>
-                        <input autocomplete="off" class="form-control" name="date" bsDatepicker
-                            [bsConfig]="{dateInputFormat: 'MM/YYYY',containerClass: 'theme-dark-blue'}" minMode="month" placeholder="MM/YYYY"
-                            mask="00/0000">
+                        <input autocomplete="off" class="form-control" name="date" bsDatepicker [maxDate]="today"
+                            [bsConfig]="{dateInputFormat: 'MM/YYYY', containerClass: 'theme-dark-blue'}" minMode="month"
+                            placeholder="MM/YYYY" mask="00/0000">
                     </div>
                 </div>
                 <div class="row">
                     <div class="form-group col-lg-4">
                         <label for="paymentdate">Payment Date</label>
                         <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
-                        [maxDate]="today"  [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                            [maxDate]="today"
+                            [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                     </div>
                 </div>
 
