--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,18 @@
 <footer class="sticky-footer bg-white">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
-            <span>Copyright &copy; TechMatys 2020</span>
+            <h6>
+                <span>
+                    Copyright &copy;
+                    <span class="logo-red">
+                        Tech
+                    </span>
+                    <span class="logo-purple">
+                        Matys
+                    </span>
+                    2022
+                </span>
+            </h6>
         </div>
     </div>
 </footer>
