--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -25,13 +25,7 @@
     <!-- End of Main Content -->
 
     <!-- Footer -->
-    <footer class="sticky-footer bg-white">
-      <div class="container my-auto">
-        <div class="copyright text-center my-auto">
-          <span>Copyright &copy; TechMatys 2020</span>
-        </div>
-      </div>
-    </footer>
+    <app-footer></app-footer>
     <!-- End of Footer -->
 
   </div>
