--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -32,10 +32,10 @@
                         </thead>
                         <tbody>
                             <tr *ngFor="let employee of employeeList">
-                                <td>{{employee.name}}</td>
-                                <td>{{employee.emailAddress}}</td>
-                                <td>{{employee.startDate}}</td>
-                                <td>{{employee.designation}}</td>
+                                <td>{{employee.firstName}} {{employee.lastName}}</td>
+                                <td>{{employee.emailAddress || 'N/A'}}</td>
+                                <td>{{employee.startDate || 'N/A'}}</td>
+                                <td>{{employee.designation || 'N/A'}}</td>
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
