--- a/src/app/admin/pages/profile/profile.component.html
+++ b/src/app/admin/pages/profile/profile.component.html
@@ -40,9 +40,9 @@
                 <div class="form-group col-lg-6">
                     <label for="dob">Date of Birth</label>
                     <div class="input-group">
-                        <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker #d="ngbDatepicker"
-                            id="dob" mask="00/00/0000" autocomplete="off">
-                        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+                        <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                                mask="00/00/0000" [maxDate]="today"
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY', showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                     </div>
                 </div>
             </div>
