footer year changes

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,13 +4,7 @@
             <h6>
                 <span>
                     Copyright &copy;
-                    <span class="logo-red">
-                        Tech
-                    </span>
-                    <span class="logo-purple">
-                        Matys
-                    </span>
-                    2022
+                    <span class="logo-red">Tech</span><span class="logo-purple">Matys</span> {{year}}
                 </span>
             </h6>
         </div>
