--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -45,7 +45,7 @@
                                     {{ project.status}}
                                 </td>
                                 <td>
-                                    {{ project.technology}
+                                    {{ project.technology}}
                                 </td>
 
                                 <td class="action-button">
@@ -109,6 +109,7 @@
                         <label for="duration">Duration </label>
                         <select name="duration" class="form-select col-lg-12"
                             (change)="onDurationChange($event.target)">
+                            <option value="0">-- Select Duration --</option>
                             <option *ngFor="let duration of durations" [value]="duration.id"> {{duration.name}}
                             </option>
                         </select>
@@ -117,6 +118,7 @@
                     <div class="form-group col-lg-4">
                         <label for="status">Status </label>
                         <select name="status" class="form-select col-lg-12" (change)="onStatusChange($event.target)">
+                            <option value="0">-- Select Status --</option>
                             <option *ngFor="let status of status" [value]="status.id">{{status.name}}
                             </option>
                         </select>
@@ -127,16 +129,18 @@
                     <div class="form-group col-lg-4">
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
-                            [maxDate]="today"  [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                                mask="00/00/0000" [maxDate]="today"
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                         </div>
                     </div>
 
                     <div class="form-group col-lg-4">
                         <label for="completionDate">Completion Date </label>
                         <div class="input-group">
-                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker mask="00/00/0000"
-                              [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
+                            <input type="text" placeholder="DD/MM/YYYY" class="form-control" bsDatepicker
+                                mask="00/00/0000"
+                                [bsConfig]="{dateInputFormat: 'DD/MM/YYYY',showWeekNumbers:false, containerClass: 'theme-dark-blue'}">
                         </div>
                     </div>
 
